sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: ';' expected but 'if' found.
    } if (plusPetit(position, position+1)) {
      ^